<resources>
    <string name="ayp_play_button">Play button</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_screen_hide_button">Hide screen button</string>
    <string name="ayp_rate_button">Playback rate button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_action_next">YouTube player next action</string>
    <string name="ayp_action_previous">YouTube player previous action</string>
</resources>
